--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Real-Time Chat Application</title>
+    <title>Local Chat</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="icon" href="./assets/wapp.ico" type="image/x-icon" />
   </head>
   <body>
-    <header><img src="./assets/hashtag.svg" alt="" />Chat</header>
+    <header><img src="./assets/chaticon.svg" alt="chaticon" />Local-Zap</header>
     <main>
       <ul id="mensagens"></ul>
       <div id="envio-mensagens">
